Second and third page (third page is not finished).

--- a/Index.html
+++ b/Index.html
@@ -30,15 +30,36 @@
 			</div>
 			<div class="maincontent">
 				<h2 class="mainheader">Fresh Life</h2>
-				<p class="maindescription">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud execitation ullamco.</p>
+				<p class="mainparagraph">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud execitation ullamco.</p>
 				<button class="mainbutton">GET FREE NOW</button>
 			</div>
 		</div>
 		
 		<div class="about">
+			<img class="cup" src="Assets/img-1.png"/>
+			<span>
+				<h2 class="aboutheader">About Us</h2>
+				<p class="aboutparagraph">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum. <br /><br /> Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+			</span>
 		</div>
 		
 		<div class="services">
+			<div class="panel">
+				<p class="paneltext">Online Shopping</p> <img class="panelimg" src="Assets/icon-3.svg"/>
+			</div>
+			
+			<div class="panel">
+				<p class="paneltext">Quality Product</p> <img class="panelimg" src="Assets/icon-2.svg"/>
+			</div>
+			
+			<div class="panel">
+				<p class="paneltext1">Domestic & International Delivery</p> <img class="panelimg" src="Assets/icon-1.svg"/>
+			</div>
+			
+			<div class="panel">
+				<p class="paneltext">Well Organized</p> <img class="panelimg" src="Assets/icon.svg"/>
+			</div>
+			<img class="tomatoes" src="Assets/tomato.png"/>
 		</div>
 		
 		<div class="gallery">
