Finished third page.

--- a/Index.html
+++ b/Index.html
@@ -59,7 +59,10 @@
 			<div class="panel">
 				<p class="paneltext">Well Organized</p> <img class="panelimg" src="Assets/icon.svg"/>
 			</div>
-			<img class="tomatoes" src="Assets/tomato.png"/>
+			<div class="ourservices">
+				<img class="tomatoes" src="Assets/tomato.png"/>
+				<h4 class="tomatoheader">Our Services</h4>
+			</div>
 		</div>
 		
 		<div class="gallery">
