--- a/Index.html
+++ b/Index.html
@@ -66,6 +66,16 @@
 		</div>
 		
 		<div class="gallery">
+				<h4 class="galleryheader">Gallery</h4>
+				<p class="gallerytext">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<div class="gallerycontent">
+					<img class="galleryimg1" src="Assets/1-1.png"/>
+					<img class="galleryimg2" src="Assets/2-1.png"/>
+					<img class="galleryimg3" src="Assets/3-1.png"/>
+					<img class="galleryimg4" src="Assets/4.png"/>
+					<img class="galleryimg5" src="Assets/5.png"/>
+					<button class="viewmore">VIEW MORE</button>
+				</div>
 		</div>
 		
 		<div class="subcribtion">
