Finished fifth and sixth pages

--- a/Index.html
+++ b/Index.html
@@ -73,15 +73,29 @@
 					<img class="galleryimg2" src="Assets/2-1.png"/>
 					<img class="galleryimg3" src="Assets/3-1.png"/>
 					<img class="galleryimg4" src="Assets/4.png"/>
-					<img class="galleryimg5" src="Assets/5.png"/>
+					<img class="galleryimg5" src="Assets/5@2x.png"/>
 					<button class="viewmore">VIEW MORE</button>
 				</div>
 		</div>
 		
-		<div class="subcribtion">
+		<div class="subscription">
+			<h4 class="subheader">Subscribe To Us</h4>
+			<p class="subtext">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			<form>
+				<input class="subform" type="text" name="sub-text-field" value="Your email address...">
+				<button class="subbutton">SUBSCRIBE</button>
+			</form>
 		</div>
 		
 		<div class="blog">
+			<h4 class="blogheader">Blog</h4>
+			<p class="blogtext">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+			<span class="blogspan">
+				<img class="blogimg" src="Assets/1@2x.png"/>
+				<img class="blogimg" src="Assets/2@2x.png"/>
+				<img class="blogimg" src="Assets/3@2x.png"/>
+			</span>
+			<button class="blogbutton">VIEW MORE</button>
 		</div>
 		
 		<div class="contact">
