Finished seventh page and footer + few fixes

--- a/Index.html
+++ b/Index.html
@@ -99,9 +99,30 @@
 		</div>
 		
 		<div class="contact">
+			<h4 class="contactheader">Contact</h4>
+			<p class="contacttext">For new projects, ideas, business or anything you'd like to discuss, contact with me!</p>
+			<div class="contactform">
+				<div class="formheader">
+					<h6 class="formtitle">Auskteez Tran</h6>
+				</div>
+				<form ><input class="data" type="text" name="sub-text-field" value="Your email..."></form>
+				<form ><input class="data" type="text" name="sub-text-field" value="Your phone number"/></form>
+				<form ><input class="message" type="text" name="sub-text-field" value="Your message..."></form>
+			</div>
+			<div class="address">
+				<h6 class="addressheader">ADDRESS</h6>
+				<p class="addresstext">123 City name, Street, City, Country</p>
+				<h6 class="addressheader">EMAIL</h6>
+				<p class="addresstext">cahee@domain.com</p>
+				<h6 class="addressheader">PHONE</h6>
+				<p class="addresstext">+012 345 6789</p>
+			</div>
 		</div>
 		
 		<footer>
+			<p class="footertext">&copy; 2015 Company. All right reserved.</p>
+			<h1 class="name">Cahee</h1>
+			<p class="footertext">Made with <span class="love">love</span> by Auskteez</p>
 		</footer>
 	
 	</div>
