--- a/Index.html
+++ b/Index.html
@@ -33,13 +33,14 @@
 				<p class="mainparagraph">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud execitation ullamco.</p>
 				<button class="mainbutton">GET FREE NOW</button>
 			</div>
+			<img class="scroll" src="Assets/scroll.png"/>
 		</div>
 		
 		<div class="about">
 			<img class="cup" src="Assets/img-1.png"/>
 			<span>
 				<h2 class="aboutheader">About Us</h2>
-				<p class="aboutparagraph">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum. <br /><br /> Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+				<p class="aboutparagraph">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p><p class="aboutparagraph"> Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 			</span>
 		</div>
 		
