first part of fixes after code review

--- a/Index.html
+++ b/Index.html
@@ -10,120 +10,120 @@
 	
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 </head>
 
 <body>
 
 	<div class="container">
 	
-		<div class="main">
+		<div id="main" class="main">
 			<div class="top">
 				<h1 class="name">Cahee</h1>
 				<ul class="navigation">
-					<li>HOME</li>
-					<li>ABOUT</li>
-					<li>SERVICES</li>
-					<li>GALLERY</li>
-					<li>BLOG</li>
-					<li>CONTACT</li>
+					<li><a href="#main">HOME</a></li>
+					<li><a href="#about">ABOUT</a></li>
+					<li><a href="#services">SERVICES</a></li>
+					<li><a href="#gallery">GALLERY</a></li>
+					<li><a href="#blog">BLOG</a></li>
+					<li><a href="#contact">CONTACT</a></li>
 				</ul>
 			</div>
-			<div class="maincontent">
-				<h2 class="mainheader">Fresh Life</h2>
-				<p class="mainparagraph">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud execitation ullamco.</p>
-				<button class="mainbutton">GET FREE NOW</button>
+			<div class="main-content">
+				<h2 class="main-header">Fresh Life</h2>
+				<p class="main-paragraph">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud execitation ullamco.</p>
+				<button class="main-button">GET FREE NOW</button>
 			</div>
 			<img class="scroll" src="Assets/scroll.png"/>
 		</div>
 		
-		<div class="about">
+		<div id="about" class="about">
 			<img class="cup" src="Assets/img-1.png"/>
 			<span>
-				<h2 class="aboutheader">About Us</h2>
-				<p class="aboutparagraph">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p><p class="aboutparagraph"> Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
+				<h2 class="about-header">About Us</h2>
+				<p class="about-paragraph">Abore Cahee magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p><p class="about-paragraph"> Nim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
 			</span>
 		</div>
 		
-		<div class="services">
+		<div id="services" class="services">
 			<div class="panel">
-				<p class="paneltext">Online Shopping</p> <img class="panelimg" src="Assets/icon-3.svg"/>
+				<p class="panel-text">Online Shopping</p> <img class="panel-img" src="Assets/icon-3.svg"/>
 			</div>
 			
 			<div class="panel">
-				<p class="paneltext">Quality Product</p> <img class="panelimg" src="Assets/icon-2.svg"/>
+				<p class="panel-text">Quality Product</p> <img class="panel-img" src="Assets/icon-2.svg"/>
 			</div>
 			
 			<div class="panel">
-				<p class="paneltext1">Domestic & International Delivery</p> <img class="panelimg" src="Assets/icon-1.svg"/>
+				<p class="panel-text1">Domestic & International Delivery</p> <img class="panel-img" src="Assets/icon-1.svg"/>
 			</div>
 			
 			<div class="panel">
-				<p class="paneltext">Well Organized</p> <img class="panelimg" src="Assets/icon.svg"/>
+				<p class="panel-text">Well Organized</p> <img class="panel-img" src="Assets/icon.svg"/>
 			</div>
-			<div class="ourservices">
+			<div class="our-services">
 				<img class="tomatoes" src="Assets/tomato.png"/>
-				<h4 class="tomatoheader">Our Services</h4>
+				<h4 class="tomato-header">Our Services</h4>
 			</div>
 		</div>
 		
-		<div class="gallery">
-				<h4 class="galleryheader">Gallery</h4>
-				<p class="gallerytext">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<div class="gallerycontent">
-					<img class="galleryimg1" src="Assets/1-1.png"/>
-					<img class="galleryimg2" src="Assets/2-1.png"/>
-					<img class="galleryimg3" src="Assets/3-1.png"/>
-					<img class="galleryimg4" src="Assets/4.png"/>
-					<img class="galleryimg5" src="Assets/5@2x.png"/>
-					<button class="viewmore">VIEW MORE</button>
+		<div id="gallery" class="gallery">
+				<h4 class="gallery-header">Gallery</h4>
+				<p class="gallery-text">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<div class="gallery-content">
+					<img class="gallery-img1" src="Assets/1-1.png"/>
+					<img class="gallery-img2" src="Assets/2-1.png"/>
+					<img class="gallery-img3" src="Assets/3-1.png"/>
+					<img class="gallery-img4" src="Assets/4.png"/>
+					<img class="gallery-img5" src="Assets/5@2x.png"/>
+					<button class="view-more">VIEW MORE</button>
 				</div>
 		</div>
 		
-		<div class="subscription">
-			<h4 class="subheader">Subscribe To Us</h4>
-			<p class="subtext">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+		<div id="subscription" class="subscription">
+			<h4 class="sub-header">Subscribe To Us</h4>
+			<p class="sub-text">Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			<form>
-				<input class="subform" type="text" name="sub-text-field" value="Your email address...">
-				<button class="subbutton">SUBSCRIBE</button>
+				<input class="sub-form" type="text" name="sub-text-field" placeholder="Your email address...">
+				<button class="sub-button">SUBSCRIBE</button>
 			</form>
 		</div>
 		
-		<div class="blog">
-			<h4 class="blogheader">Blog</h4>
-			<p class="blogtext">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
-			<span class="blogspan">
-				<img class="blogimg" src="Assets/1@2x.png"/>
-				<img class="blogimg" src="Assets/2@2x.png"/>
-				<img class="blogimg" src="Assets/3@2x.png"/>
+		<div id="blog" class="blog">
+			<h4 class="blog-header">Blog</h4>
+			<p class="blog-text">Dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+			<span class="blog-span">
+				<img class="blog-img" src="Assets/1@2x.png"/>
+				<img class="blog-img" src="Assets/2@2x.png"/>
+				<img class="blog-img" src="Assets/3@2x.png"/>
 			</span>
-			<button class="blogbutton">VIEW MORE</button>
+			<button class="blog-button">VIEW MORE</button>
 		</div>
 		
-		<div class="contact">
-			<h4 class="contactheader">Contact</h4>
-			<p class="contacttext">For new projects, ideas, business or anything you'd like to discuss, contact with me!</p>
-			<div class="contactform">
-				<div class="formheader">
-					<h6 class="formtitle">Auskteez Tran</h6>
-				</div>
-				<form ><input class="data" type="text" name="sub-text-field" value="Your email..."></form>
-				<form ><input class="data" type="text" name="sub-text-field" value="Your phone number"/></form>
-				<form ><input class="message" type="text" name="sub-text-field" value="Your message..."></form>
+		<div id="contact" class="contact">
+			<h4 class="contact-header">Contact</h4>
+			<p class="contact-text">For new projects, ideas, business or anything you'd like to discuss, contact with me!</p>
+			<div class="contact-form">
+				<a><form><input class="data1" type="text" name="sub-text-field" value="Auskteez Tran"></form></a>
+				<form><input class="data" type="text" name="sub-text-field" placeholder="Your email..."></form>
+				<form><input class="data" type="text" name="sub-text-field" placeholder="Your phone number"/></form>
+				<form><input class="message" type="text" name="sub-text-field" placeholder="Your message..."></form>
 			</div>
-			<div class="address">
-				<h6 class="addressheader">ADDRESS</h6>
-				<p class="addresstext">123 City name, Street, City, Country</p>
-				<h6 class="addressheader">EMAIL</h6>
-				<p class="addresstext">cahee@domain.com</p>
-				<h6 class="addressheader">PHONE</h6>
-				<p class="addresstext">+012 345 6789</p>
+			<div id="address" class="address">
+				<h6 class="address-header">ADDRESS</h6>
+				<p class="address-text">123 City name, Street, City, Country</p>
+				<h6 class="address-header">EMAIL</h6>
+				<p class="address-text">cahee@domain.com</p>
+				<h6 class="address-header">PHONE</h6>
+				<p class="address-text">+012 345 6789</p>
 			</div>
 		</div>
 		
 		<footer>
-			<p class="footertext">&copy; 2015 Company. All right reserved.</p>
+			<p class="footer-text">&copy; 2015 Company. All right reserved.</p>
 			<h1 class="name">Cahee</h1>
-			<p class="footertext">Made with <span class="love">love</span> by Auskteez</p>
+			<p class="footer-text">Made with <span class="love">love</span> by Auskteez</p>
 		</footer>
 	
 	</div>
